<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
    <groupId>com.zwei</groupId>
    <artifactId>zwei</artifactId>
    <version>3.9.2</version>

    <name>zwei</name>
    <url>http://www.zwei.vip</url>
    <description>知微——地质灾害监测管理系统</description>
    
    <properties>
        <zwei.version>3.9.2</zwei.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <spring-boot.version>4.0.3</spring-boot.version>
        <mybatis-spring-boot.version>4.0.1</mybatis-spring-boot.version>
        <druid.version>1.2.28</druid.version>
        <yauaa.version>8.1.0</yauaa.version>
        <kaptcha.version>2.3.3</kaptcha.version>
        <pagehelper.boot.version>2.1.1</pagehelper.boot.version>
        <fastjson.version>2.0.62</fastjson.version>
        <oshi.version>6.10.0</oshi.version>
        <commons.io.version>2.21.0</commons.io.version>
        <poi.version>4.1.2</poi.version>
        <jwt.version>0.9.1</jwt.version>
        <jaxb-api.version>2.3.1</jaxb-api.version>
        <springdoc.version>3.0.2</springdoc.version>
        <mica-mqtt.version>2.6.3</mica-mqtt.version>
        <iotdb.version>1.3.4</iotdb.version>
        <lombok.version>1.18.44</lombok.version>
    </properties>

    <!-- 依赖声明 -->
    <dependencyManagement>
        <dependencies>

            <!-- SpringBoot的依赖配置-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 阿里数据库连接池 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-4-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>

            <!-- 解析客户端操作系统、浏览器等 -->
            <dependency>
                <groupId>nl.basjes.parse.useragent</groupId>
                <artifactId>yauaa</artifactId>
                <version>${yauaa.version}</version>
            </dependency>

            <!-- pagehelper 分页插件 -->
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis-spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${jaxb-api.version}</version>
            </dependency>

            <!-- 获取系统信息 -->
            <dependency>
                <groupId>com.github.oshi</groupId>
                <artifactId>oshi-core</artifactId>
                <version>${oshi.version}</version>
            </dependency>

            <!-- spring-doc -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- io常用工具类 -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>

            <!-- excel工具 -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>

            <!-- 阿里JSON解析器 -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <!-- Token生成与解析-->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jwt.version}</version>
            </dependency>

            <!-- 验证码 -->
            <dependency>
                <groupId>pro.fessional</groupId>
                <artifactId>kaptcha</artifactId>
                <version>${kaptcha.version}</version>
            </dependency>

            <!-- 定时任务-->
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-quartz</artifactId>
                <version>${zwei.version}</version>
            </dependency>

            <!-- 核心模块-->
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-framework</artifactId>
                <version>${zwei.version}</version>
            </dependency>

            <!-- 日志模块-->
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-log</artifactId>
                <version>${zwei.version}</version>
            </dependency>

            <!-- 系统模块-->
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-system</artifactId>
                <version>${zwei.version}</version>
            </dependency>

            <!-- IOT模块（拆分后） -->
            <dependency><groupId>com.zwei</groupId><artifactId>zwei-iot-monitor</artifactId><version>${zwei.version}</version></dependency>
            <dependency><groupId>com.zwei</groupId><artifactId>zwei-iot-device</artifactId><version>${zwei.version}</version></dependency>
            <dependency><groupId>com.zwei</groupId><artifactId>zwei-iot-timeseries</artifactId><version>${zwei.version}</version></dependency>
            <dependency><groupId>com.zwei</groupId><artifactId>zwei-iot-broker</artifactId><version>${zwei.version}</version></dependency>
            <dependency><groupId>com.zwei</groupId><artifactId>zwei-iot-hazard</artifactId><version>${zwei.version}</version></dependency>
            <dependency><groupId>com.zwei</groupId><artifactId>zwei-iot-parser</artifactId><version>${zwei.version}</version></dependency>
            <dependency><groupId>com.zwei</groupId><artifactId>zwei-iot-video</artifactId><version>${zwei.version}</version></dependency>
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-iot-alarm</artifactId>
                <version>${zwei.version}</version>
            </dependency>

            <!-- 报告模块 -->
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-iot-report</artifactId>
                <version>${zwei.version}</version>
            </dependency>

            <!-- Source: https://mvnrepository.com/artifact/org.dromara.mica-mqtt/mica-mqtt-server-spring-boot-starter -->
            <dependency>
                <groupId>org.dromara.mica-mqtt</groupId>
                <artifactId>mica-mqtt-server-spring-boot-starter</artifactId>
                <version>${mica-mqtt.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.iotdb</groupId>
                <artifactId>iotdb-jdbc</artifactId>
                <version>${iotdb.version}</version>
            </dependency>

            <!-- lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- 通用工具-->
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-common</artifactId>
                <version>${zwei.version}</version>
            </dependency>

            <!-- 监控模块 -->
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-monitor</artifactId>
                <version>${zwei.version}</version>
            </dependency>

            <!-- 数据共享模块 -->
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-datashare</artifactId>
                <version>${zwei.version}</version>
            </dependency>

            <!-- Terra AI Assistant 模块 -->
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-terra-core</artifactId>
                <version>${zwei.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zwei</groupId>
                <artifactId>zwei-terra-agent</artifactId>
                <version>${zwei.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <modules>
        <module>zwei-admin</module>
        <module>zwei-framework</module>
        <module>zwei-log</module>
        <module>zwei-system</module>
        <module>zwei-quartz</module>
        <module>zwei-common</module>
        <module>zwei-iot-monitor</module>
        <module>zwei-iot-device</module>
        <module>zwei-iot-timeseries</module>
        <module>zwei-iot-broker</module>
        <module>zwei-iot-hazard</module>
        <module>zwei-iot-parser</module>
        <module>zwei-iot-video</module>
        <module>zwei-iot-alarm</module>
        <module>zwei-iot-report</module>
        <module>zwei-monitor</module>
        <module>zwei-datashare</module>
        <module>zwei-terra</module>
    </modules>
    <packaging>pom</packaging>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>
